k8s/network-policy/deny-egress-falco.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
  namespace: falco
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress: []
